k8s/dashboard.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.labs.vee.codes`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
      services:
        - name: api@internal
          kind: TraefikService
