k8s/ingress_route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.labs.vee.codes`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: leproduction
